Fix avatar sizes and alignment on delagation page

--- a/static-src/scss/components/_delagation.scss
+++ b/static-src/scss/components/_delagation.scss
@@ -65,7 +65,8 @@ body .delagation-header {
             text-align: center;
 
             img {
-                @include rem(margin-bottom, 10px);
+                @include rem(margin, 0 auto 10px);
+                @include rem(max-width, 75px);
                 display: block;
                 vertical-align: middle;
             }
